Fix for all the links on the landing page, managed to remove the <a hrefs> for some reason

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 										<li><div class="checkmark"></div><p class="small">Säker och lättillgänglig dokumentation.</p></li>
 										<li><div class="checkmark"></div><p class="small">Tillgång till vår ”Byggfelsbank”.</p></li>
 									</ul>
-								<p class="popupTrigger text-blue bold small" data-popup-id="ispect-details">Vårt helhetskoncept med iSpect</p>
+								<a class="popupTrigger text-blue" data-popup-id="ispect-details"><p class="bold small margin-bottom-2">Vårt helhetskoncept med iSpect</p></a>
 								<a href="kontakt/" class="common-Button blue text-white">Vill du veta mer? Hör av dig</a>
 							</li>
 							<div class="col-6-12 left fromRight">
@@ -332,8 +332,8 @@
 									<p>
 										Det ger bland annat möjlighet till noll byggfel vid slutbesiktning.
 									</p>
-									<p class="popupTrigger text-blue bold small margin-bottom-3" data-popup-id="services">Våra tjänster för entreprenadbesiktning</p>
-									<p class="popupTrigger text-blue bold small" data-popup-id="ispect-details">Vårt helhetskoncept med iSpect</p>
+									<a class="popupTrigger" data-popup-id="services"><p class="text-blue bold small margin-bottom-3">Våra tjänster för entreprenadbesiktning</p></a>
+									<a class="popupTrigger" data-popup-id="ispect-details"><p class="text-blue bold small">Vårt helhetskoncept med iSpect</p></a>
 								</div>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
@@ -395,8 +395,8 @@
 									<p>
 										Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av nyproduktion och ROT-arbeten i bostadrättsfastigheter, samt KA-ansvariga.
 									</p>
-									<p class="popupTrigger text-blue bold small margin-bottom-3" data-popup-id="services">Våra tjänster för Bostadsrättsföreningar</p>
-									<p class="popupTrigger text-blue bold small" data-popup-id="brf-services">Mer om vårt erbjudande</p>
+									<a class="popupTrigger" data-popup-id="services"><p class="text-blue bold small margin-bottom-3">Våra tjänster för Bostadsrättsföreningar</p></a>
+									<a class="popupTrigger" data-popup-id="brf-services"><p class="text-blue bold small">Mer om vårt erbjudande</p></a>
 								</div>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
@@ -453,8 +453,8 @@
 								<h3>Småhus, lägenheter, fritidshus</h3>
 								<div class="ae-3">
 									<p>Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
-									<p class="popupTrigger text-blue bold small margin-bottom-3" data-popup-id="services">Våra tjänster för privatpersoner</p>
-									<p class="popupTrigger text-blue bold small" data-popup-id="privat-services">Mer om besiktning för småhus mm</p>
+									<a class="popupTrigger" data-popup-id="services"><p class="text-blue bold small margin-bottom-3">Våra tjänster för privatpersoner</p></a>
+									<a class="popupTrigger" data-popup-id="privat-services"><p class="text-blue bold small">Mer om besiktning för småhus mm</p></a>
 								</div>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
@@ -516,8 +516,8 @@
 								<h1 class="">Vår digitala besiktningsprocess</h1>
 								<h3>För ökad lönsamhet och leveranssäkerhet i byggprojekt</h3>
 								<p>iSpect ger direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
-								<a class="margin-bottom-2 text-blue popupTrigger" data-popup-id="ispect-details">
-									<p class="bold small">Vårt helhetskoncept med iSpect</p>
+								<a class="popupTrigger" data-popup-id="ispect-details">
+									<p class="margin-bottom-2 text-blue bold small">Vårt helhetskoncept med iSpect</p>
 								</a>
 								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
 								<script>
