--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 										<li><div class="checkmark"></div><p class="small">Säker och lättillgänglig dokumentation.</p></li>
 										<li><div class="checkmark"></div><p class="small">Tillgång till vår ”Byggfelsbank”.</p></li>
 									</ul>
-								<a class="popupTrigger text-blue" data-popup-id="ispect-details"><p class="bold small margin-bottom-2">Vårt helhetskoncept med iSpect</p></a>
+								<a class="popupTrigger" data-popup-id="ispect-details"><p class="text-blue bold small margin-bottom-2">Vårt helhetskoncept med iSpect</p></a>
 								<a href="kontakt/" class="common-Button blue text-white">Vill du veta mer? Hör av dig</a>
 							</li>
 							<div class="col-6-12 left fromRight">
