Removed js files

--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
 							<li class="col-6-12 left cell-32">
 								<h1>Entreprenadbesiktning som ökar lönsamheten.</h1>
 								<h3>Besiktningsman.se erbjuder digitaliserad entreprenadbesiktning över hela landet.</h3>
-									<ul>
-										<li><p class="small">Det ger er:</p></li>
-										<li><div class="checkmark"></div><p class="small">Sänkta kostnader i produktion och eftermarknad.</p></li>
-										<li><div class="checkmark"></div><p class="small" style="margin-left: 23px;">Möjlighet till färdigt projekt med noll byggfel <br>på avtalad dag.</p></li>
-										<li><div class="checkmark"></div><p class="small">Säker och lättillgänglig dokumentation.</p></li>
-										<li><div class="checkmark"></div><p class="small">Tillgång till vår ”Byggfelsbank”.</p></li>
-									</ul>
+								<ul>
+									<li><p class="small">Det ger er:</p></li>
+									<li><div class="checkmark"></div><p class="small">Sänkta kostnader i produktion och eftermarknad.</p></li>
+									<li><div class="checkmark"></div><p class="small" style="margin-left: 23px;">Möjlighet till färdigt projekt med noll byggfel <br>på avtalad dag.</p></li>
+									<li><div class="checkmark"></div><p class="small">Säker och lättillgänglig dokumentation.</p></li>
+									<li><div class="checkmark"></div><p class="small">Tillgång till vår ”Byggfelsbank”.</p></li>
+								</ul>
 								<a class="popupTrigger" data-popup-id="ispect-details"><p class="text-blue bold small margin-bottom-2">Vårt helhetskoncept med iSpect</p></a>
 								<a href="kontakt/" class="common-Button blue text-white">Vill du veta mer? Hör av dig</a>
 							</li>
@@ -322,19 +322,17 @@
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Entreprenadbesiktning för nyproduktion och ROT</h1>
-								<div class="">
-									<p>
-										Vi erbjuder ett komplett utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
-									</p>
-									<p>
-										Vi erbjuder också ett samlat helhetskoncept med iSpect för ökad lönsamhet och leveranssäkerhet i byggprojekt.
-									</p>
-									<p>
-										Det ger bland annat möjlighet till noll byggfel vid slutbesiktning.
-									</p>
-									<a class="popupTrigger" data-popup-id="services"><p class="text-blue bold small margin-bottom-3">Våra tjänster för entreprenadbesiktning</p></a>
-									<a class="popupTrigger" data-popup-id="ispect-details"><p class="text-blue bold small">Vårt helhetskoncept med iSpect</p></a>
-								</div>
+								<p>
+									Vi erbjuder ett komplett utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
+								</p>
+								<p>
+									Vi erbjuder också ett samlat helhetskoncept med iSpect för ökad lönsamhet och leveranssäkerhet i byggprojekt.
+								</p>
+								<p>
+									Det ger bland annat möjlighet till noll byggfel vid slutbesiktning.
+								</p>
+								<a class="popupTrigger" data-popup-id="services"><p class="text-blue bold small margin-bottom-3">Våra tjänster för entreprenadbesiktning</p></a>
+								<a class="popupTrigger" data-popup-id="ispect-details"><p class="text-blue bold small">Vårt helhetskoncept med iSpect</p></a>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
 										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
@@ -391,13 +389,11 @@
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
-								<div class="">
-									<p>
-										Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av nyproduktion och ROT-arbeten i bostadrättsfastigheter, samt KA-ansvariga.
-									</p>
-									<a class="popupTrigger" data-popup-id="services"><p class="text-blue bold small margin-bottom-3">Våra tjänster för Bostadsrättsföreningar</p></a>
-									<a class="popupTrigger" data-popup-id="brf-services"><p class="text-blue bold small">Mer om vårt erbjudande</p></a>
-								</div>
+								<p>
+									Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av nyproduktion och ROT-arbeten i bostadrättsfastigheter, samt KA-ansvariga.
+								</p>
+								<a class="popupTrigger" data-popup-id="services"><p class="text-blue bold small margin-bottom-3">Våra tjänster för Bostadsrättsföreningar</p></a>
+								<a class="popupTrigger" data-popup-id="brf-services"><p class="text-blue bold small">Mer om vårt erbjudande</p></a>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
 										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
@@ -451,11 +447,9 @@
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Besiktningstjänster för privatpersoner</h1>
 								<h3>Småhus, lägenheter, fritidshus</h3>
-								<div class="ae-3">
-									<p>Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
-									<a class="popupTrigger" data-popup-id="services"><p class="text-blue bold small margin-bottom-3">Våra tjänster för privatpersoner</p></a>
-									<a class="popupTrigger" data-popup-id="privat-services"><p class="text-blue bold small">Mer om besiktning för småhus mm</p></a>
-								</div>
+								<p>Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
+								<a class="popupTrigger" data-popup-id="services"><p class="text-blue bold small margin-bottom-3">Våra tjänster för privatpersoner</p></a>
+								<a class="popupTrigger" data-popup-id="privat-services"><p class="text-blue bold small">Mer om besiktning för småhus mm</p></a>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
 										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
@@ -488,7 +482,7 @@
 									</li>
 								</ul>
 							</li>
-							<li class="col-6-12 left ae-1 fromRight">
+							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow" width="800" style="border-radius: 8px;" src="assets/img/backgrounds/village_houses.jpg" alt="Fritidshus på svenska västkusten" />
 							</li>
 						</ul>
