Lol file path on landing page was directing the js files into nowhere

--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
 									<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
 								</li>
 								<li class="col-6-12 left">
-									<img class="" src="../assets/img/ispect/ipad_front_sv.png" width="600" alt="iSpect skärmdump" />
+									<img class="" src="assets/img/ispect/ipad_front_sv.png" width="600" alt="iSpect skärmdump" />
 								</li>
 							</ul>
 
@@ -1268,9 +1268,9 @@
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script src="../js/plugins.js" type="text/javascript" name="plugins"></script>
-	<script src="../js/slides.js" type="text/javascript" name="main-scripts"></script>
-	<script src="../js/custom.js" type="text/javascript" name="main-scripts"></script>
+	<script src="js/plugins.js" type="text/javascript" name="plugins"></script>
+	<script src="js/slides.js" type="text/javascript" name="main-scripts"></script>
+	<script src="js/custom.js" type="text/javascript" name="main-scripts"></script>
 
 </body>
 
