--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -148,9 +148,9 @@
 		<div class="background" style="background-image:url(../assets/img/backgrounds/coms.jpg)"></div>
 	</section>
 	<!-- Slide #32 -->
-	<section class="slide whiteSlide fromLeft" id="">
+	<section class="slide whiteSlide fromLeft" id="bm-location">
 		<div class="content">
-			<div class="container container-md">
+			<div class="container-lg">
 				<div class="wrap">
 
 					<div class="fix-12-12">
@@ -158,8 +158,7 @@
 							<li class="col-6-12 left cell-32">
 
 								<div class="soft-shadow border-radius padding-2" style="box-shadow: none;width: 100%">
-									<h3>Här finns Besiktningsman.se</h3>
-									<p style="font-size: 16px;" class="bold">Vi expanderar och finns nära våra kunder.</p>
+									<h3>Besiktningsman.se har rikstäckande verksamhet</h3>
 								</div>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
