--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -158,7 +158,7 @@
 							<li class="col-6-12 left cell-32">
 
 								<div class="soft-shadow border-radius padding-2" style="box-shadow: none;width: 100%">
-									<h3>Besiktningsman.se har rikstäckande verksamhet</h3>
+									<h3 class="center">Besiktningsman.se <br>har rikstäckande verksamhet</h3>
 								</div>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
