--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -181,7 +181,7 @@
 							<li class="col-3-12">
 								<h3 class="ae-5">Magnus Janson</h3>
 								<div class="ae-6">
-									<p class="micro bold">Vice Direktör</p>
+									<p class="micro bold">Verkställande Direktör</p>
 									<a href="mailto:magnus.janson@besiktningsman.se">
 										<p class="micro bold text-blue">magnus.janson <br> @besiktningsman.se</p>
 									</a>
