Updated text for link and button the first slide. Removed commented content.

--- a/index.html
+++ b/index.html
@@ -238,15 +238,13 @@
 									<li><div class="checkmark"></div><p class="small">Säker och lättillgänglig dokumentation.</p></li>
 									<li><div class="checkmark"></div><p class="small">Tillgång till vår ”Byggfelsbank”.</p></li>
 								</ul>
-								<a class="popupTrigger" data-popup-id="ispect-details"><p class="text-blue bold small margin-bottom-2">Vårt helhetskoncept med iSpect</p></a>
-								<a href="kontakt/" class="common-Button blue text-white">Vill du veta mer? Hör av dig</a>
+								<a class="popupTrigger" data-popup-id="ispect-details"><p class="text-blue bold small margin-bottom-2">Mer om digitaliserad entreprenadbesiktning</p></a>
+								<a href="kontakt/" class="common-Button blue text-white">Tryck här så kontaktar vi dig</a>
 							</li>
 							<div class="col-6-12 left fromRight">
 								<!-- EXAMPLE: Slider Autoplay -->
 								<div class="fix-7-12 noSelect">
 									<div class="sliderBox-83">
-										<!-- <div class="leftControl-83 ae-5 fromLeft" data-slider-id="83" data-slider-action="prev"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-left"></use></svg></div>
-										<div class="rightControl-83 ae-5 fromRight" data-slider-id="83" data-slider-action="next"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-right"></use></svg></div> -->
 										<p class="center margin-0 text-blueGrey small">Här entreprenadbesiktar vi just nu</p>
 										<ul class="slider clickable autoplay ae-1 fromAbove Quote" data-slider-interval="5000" data-slider-stoponclick="false" data-slider-id="83">
 											<li class="selected">
