contact page tel to telefon

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -125,7 +125,7 @@
 				<div class="wrap">
 					<h1 class="">Hör gärna av dig!</h1>
 					<p>
-						<a href="tel:0101654000" class="bold text-white opacity-10">Tel: 010-165 40 00</a>
+						<a href="tel:0101654000" class="bold text-white opacity-10">Telefon: 010-165 40 00</a>
 					</p>
 					<div class="fix-5-12">
 						<div class="pad shadow selected">
