trying to fix the different slides

--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
 									</li>
 								</ul>
 							</li>
-							<li class="col-6-12 left ae-1 fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow" width="1200" style="border-radius: 8px;" src="assets/img/backgrounds/goldengate.jpg" alt="Foto av byggare på Golden Gate Bridge" />
+							<li class="col-6-12 left fromRight">
+								<img class="macbook-62 margin-bottom-3 soft-shadow" width="1000" style="border-radius: 8px;" src="assets/img/backgrounds/goldengate.jpg" alt="Foto av byggare på Golden Gate Bridge" />
 							</li>
 						</ul>
 					</div>
@@ -438,7 +438,7 @@
 	<section class="slide whiteSlide kenBurns fromLeft" data-name="privat" data-title="privat" id="privat">
 		<div class="content">
 			<div class="container">
-				<div class="container-lg">
+				<div class="wrap">
 
 					<div class="fix-12-12">
 						<ul class="flex reverse">
@@ -481,7 +481,7 @@
 								</ul>
 							</li>
 							<li class="col-6-12 left fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow" width="800" style="border-radius: 8px;" src="assets/img/backgrounds/village_houses.jpg" alt="Fritidshus på svenska västkusten" />
+								<img class="macbook-62 margin-bottom-3 soft-shadow" width="900" style="border-radius: 8px;" src="assets/img/backgrounds/village_houses.jpg" alt="Fritidshus på svenska västkusten" />
 							</li>
 						</ul>
 					</div>
@@ -490,9 +490,6 @@
 			</div>
 		</div>
 	</section>
-
-
-
 	<!-- ISPECT -->
 	<section class="slide whiteSlide kenBurns fromRight" data-name="ispect" data-title="ispect" id="ispect">
 		<div class="content">
@@ -502,7 +499,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow" width="800" style="border-radius:8px;" src="assets/img/ispect/ispect_bm.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
+								<img class="macbook-61 margin-bottom-3 soft-shadow" width="1000" style="border-radius:8px;" src="assets/img/ispect/ispect_bm.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Vår digitala besiktningsprocess</h1>
@@ -551,15 +548,15 @@
 	<!-- BIG CTAS-->
 	<section class="globalFooterCards margin-bottom-8">
 		<div style="max-width: 1040px;" class="container-xl">
-			<a href="http://www.nordbygg.se/" target="_blank" class="common-Link globalFooterCard soft-shadow white safari_only">
+			<!-- <a href="http://www.nordbygg.se/" target="_blank" class="common-Link globalFooterCard soft-shadow white safari_only">
 				<h2 class="text-white">
 				Möt oss på nordbygg!
 				<p class="text-white opacity-10">Besiktningsman.se har monter på Nordbygg 2017</p>
 			</h2>
 				<div class="img-fade"></div>
 				<img src="assets/img/nyheter/nordbyggbg.jpg" class="" style="width: 100%;border-radius:4px;" />
-			</a>
-			<a href="https://medium.com/besiktningsbloggen" target="_blank" style="margin-left: 10px;" class="common-Link globalFooterCard soft-shadow white">
+			</a> -->
+			<a href="https://medium.com/besiktningsbloggen" target="_blank" style="margin-left: 10px;max-width:400px;" class="common-Link globalFooterCard soft-shadow white">
 				<h2 style="max-width: 66.667%;" class="text-blue bold"></h2>
 				<img src="assets/img/nyheter/byggint.png" />
 			</a>
@@ -656,7 +653,7 @@
 		</div>
 	</div>
 	<!-- ispect details Popup Text -->
-	<div class="popup white" data-popup-id="ispect-details">
+	<div class="popup white" data-popup-id="ispect-details" id="ispect-details">
 		<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
 		<div class="content popupContent">
 
@@ -664,22 +661,22 @@
 				<div class="content">
 					<div class="container">
 						<div class="container-lg">
-							<h1 class="center fromCenter margin-top-1">Vårt helhetskoncept med iSpect </h1>
-							<h2 class="center small">- För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h2>
+							<h1 class="center fromCenter margin-top-1">Vårt helhetskoncept med Digitaliserad entreprenadbesiktning </h1>
+							<h2 class="center small">För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h2>
 							<div class="margin-bottom-4 border-bottom-grey"></div>
 							<div class="fix-12-12">
 								<ul class="grid">
-									<li class="col-4-12 left">
+									<li class="col-6-12 left">
 										<h3>Skillnader</h3>
-										<p>
+										<p class="small">
 											Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
 											<br>
 											<br> Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
 										</p>
 									</li>
-									<li class="col-4-12 left ">
+									<li class="col-6-12 left ">
 										<h3>Fördelar</h3>
-										<p>
+										<p class="small">
 											• Inga dolda fel
 											<br> • Inga onödiga produktionsstopp
 											<br> • Ökad kvalitetssträvan främjas
@@ -689,12 +686,22 @@
 											<br> • Tillgång till ”Byggfelsbank” med tidigare erfarenheter och 300 000 byggfel
 										</p>
 									</li>
-									<li class="col-4-12 left">
+									<li class="col-6-12 left">
 										<h3>Effekter</h3>
-										<p>
+										<p class="small">
 											Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
 											<br>
 											<br> Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
+										</p>
+									</li>
+									<li class="col-6-12 left">
+										<h3>iSpect</h3>
+										<p class="small">
+											I vårt helhetskoncept för digitaliserad entreprenadbesiktning använder vi besiktningsappen iSpect.
+											<br>
+											iSpect har utvecklats i nära samarbete med Besiktningsman.se.
+											<br>
+											Vår lösning med iSpect omfattar hela byggprocessen.
 										</p>
 									</li>
 								</ul>
