--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -179,15 +179,16 @@
           <ul class="later center">
             <li class="col-6-12 ae-3">
               <h3 class="margin-bottom-1">Kontor</h3>
-              <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn"><p class="text-blue bold">Heleneborgsgatan 54, 11732</p></a>
-							<a href="tel:0101654000"><p class="text-blue bold">TEL: 010-165 40 00</p></a>
+              <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn"><p class="text-blue bold">
+Heleneborgsgatan 54, 117 32 Stockholm</p></a>
+							<a href="tel:0101654000"><p class="text-blue bold">Telefon: 010-165 40 00</p></a>
             </li>
             <li class="col-6-12 ae-5">
               <h3 class="margin-bottom-1">Följ oss</h3>
 							<a target="_blank" href="https://medium.com/besiktningsbloggen"><p class="text-blue bold">Besiktningsbloggen</p></a>
 							<a target="_blank" href="https://twitter.com/BjornSelling"><p class="text-blue bold">Twitter</p></a>
 							<a target="_blank" href="https://www.facebook.com/Besiktningsman/"><p class="text-blue bold">Facebook</p></a>
-							<a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/"><p class="text-blue bold">Linkedin</p></a>
+							<a target="_blank" href="https://www.linkedin.com/company/24778105/"><p class="text-blue bold">Linkedin</p></a>
             </li>
           </ul>
         </div>
