text updates on about us

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -147,7 +147,7 @@
 						</h1>
 						<br>
 						<h2 class="small">
-							Över hela landet och med en modern digitaliserad metod.
+							Över hela landet med en digitaliserad besiktningsprocess.
 						</h2>
 						<div class="margin-bottom-4 border-bottom-grey"></div>
 						<div class="left ae-5 cropBottom">
@@ -157,7 +157,7 @@
 							<p>Huvudkontoret finns i Stockholm och filialer finns i Uppsala, Norrköping, Göteborg och Helsingborg. Våra grundare och ägare är alltjämt aktiva i företaget.</p>
 							<p>Vi leder branschens utveckling och har bland annat skapat en digital besiktningsprocess i samarbete med iSpect och ledande byggföretag. Nyligen blev vi landets första besiktningsföretag att erbjuda radonkontroll.</p>
 							<p>Med vårt helhetskoncept har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt</p>
-							<button class="common-Button blue text-white fromLeft popupTrigger" data-popup-id="ispect-details">Mer om vårt helhetskoncept</button>
+							<a class="text-blue bold fromLeft popupTrigger" data-popup-id="ispect-details"><p class="small">Mer om vår digitaliserade besikningsprocess</p></a>
 						</div>
 					</div>
 
@@ -175,55 +175,45 @@
 						<h1 class="ae-1">Ledning</h1>
 						<p class="bold"></p>
 					</div>
-					<div class="fix-10-12">
+					<div class="container-lg">
 						<!--  List one -->
 						<ul class="flex fixedSpaces later left margin-bottom-5">
 							<li class="col-3-12">
-								<h3 class="ae-5">Magnus Janson</h3>
-								<div class="ae-6">
-									<p class="micro bold">Verkställande Direktör</p>
-									<a href="mailto:magnus.janson@besiktningsman.se">
-										<p class="micro bold text-blue">magnus.janson <br> @besiktningsman.se</p>
-									</a>
-								</div>
+								<h3>Magnus Janson</h3>
+								<p class="micro bold">Verkställande Direktör</p>
+								<a href="mailto:magnus.janson@besiktningsman.se">
+									<p class="micro bold text-blue">magnus.janson@besiktningsman.se</p>
+								</a>
 							</li>
 							<li class="col-3-12">
-								<h3 class="ae-5">Marie Selling</h3>
-								<div class="ae-6">
-									<p class="micro bold">Projekt & Ekonomichef</p>
-									<a href="mailto:marie@besiktningsman.se">
-										<p class="micro bold text-blue">marie@besiktningsman.se</p>
-									</a>
-								</div>
+								<h3>Marie Selling</h3>
+								<p class="micro bold">Projekt & Ekonomichef</p>
+								<a href="mailto:marie@besiktningsman.se">
+									<p class="micro bold text-blue">marie@besiktningsman.se</p>
+								</a>
 							</li>
 							<li class="col-3-12">
-								<h3 class="ae-5">Björn Selling</h3>
-								<div class="ae-6">
-									<p class="micro bold">Affärschef</p>
-									<a href="mailto:bjorn@besiktningsman.se">
-										<p class="micro bold text-blue">bjorn@besiktningsman.se</p>
-									</a>
-								</div>
+								<h3>Björn Selling</h3>
+								<p class="micro bold">Affärschef</p>
+								<a href="mailto:bjorn@besiktningsman.se">
+									<p class="micro bold text-blue">bjorn@besiktningsman.se</p>
+								</a>
 							</li>
 						</ul>
 						<ul class="flex fixedSpaces later left margin-bottom-5">
 							<li class="col-3-12">
-								<h3 class="ae-6">Jonny Seidel</h3>
-								<div class="ae-7">
-									<p class="micro bold">Arbetande styrelseordförande</p>
-									<a href="mailto:jonny@besiktningsman.se">
-										<p class="micro bold text-blue">jonny@besiktningsman.se</p>
-									</a>
-								</div>
+								<h3>Jonny Seidel</h3>
+								<p class="micro bold">Arbetande styrelseordförande</p>
+								<a href="mailto:jonny@besiktningsman.se">
+									<p class="micro bold text-blue">jonny@besiktningsman.se</p>
+								</a>
 							</li>
-							<li class="col-3-12  ">
-								<h3 class="ae-7">Martin Viberg</h3>
-								<div class="ae-8">
-									<p class="micro bold">Besiktningschef</p>
-									<a href="mailto:martin@besiktningsman.se">
-										<p class="micro bold text-blue">martin@besiktningsman.se</p>
-									</a>
-								</div>
+							<li class="col-3-12">
+								<h3>Martin Viberg</h3>
+								<p class="micro bold">Besiktningschef</p>
+								<a href="mailto:martin@besiktningsman.se">
+									<p class="micro bold text-blue">martin@besiktningsman.se</p>
+								</a>
 							</li>
 						</ul>
 					</div>
@@ -376,15 +366,16 @@
           <ul class="later center">
             <li class="col-6-12 ae-3">
               <h3 class="margin-bottom-1">Kontor</h3>
-              <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn"><p class="text-blue bold">Heleneborgsgatan 54, 11732</p></a>
-							<a href="tel:0101654000"><p class="text-blue bold">TEL: 010-165 40 00</p></a>
+              <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn"><p class="text-blue bold">
+Heleneborgsgatan 54, 117 32 Stockholm</p></a>
+							<a href="tel:0101654000"><p class="text-blue bold">Telefon: 010-165 40 00</p></a>
             </li>
             <li class="col-6-12 ae-5">
               <h3 class="margin-bottom-1">Följ oss</h3>
 							<a target="_blank" href="https://medium.com/besiktningsbloggen"><p class="text-blue bold">Besiktningsbloggen</p></a>
 							<a target="_blank" href="https://twitter.com/BjornSelling"><p class="text-blue bold">Twitter</p></a>
 							<a target="_blank" href="https://www.facebook.com/Besiktningsman/"><p class="text-blue bold">Facebook</p></a>
-							<a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/"><p class="text-blue bold">Linkedin</p></a>
+							<a target="_blank" href="https://www.linkedin.com/company/24778105/"><p class="text-blue bold">Linkedin</p></a>
             </li>
           </ul>
         </div>
@@ -393,77 +384,87 @@
     </div>
   </div>
 </section>
-	<!-- ispect details Popup Text -->
-	<div class="popup white" data-popup-id="ispect-details">
-		<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
-		<div class="content popupContent">
+<!-- ispect details Popup Text -->
+<div class="popup white" data-popup-id="ispect-details" id="ispect-details">
+	<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
+	<div class="content popupContent">
 
-			<section class="slide white">
-				<div class="content">
-					<div class="container">
-						<div class="container-lg">
-							<h1 class="center fromCenter margin-top-1">Vårt helhetskoncept med iSpect </h1>
-							<h2 class="center small">- För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h2>
-							<div class="margin-bottom-4 border-bottom-grey"></div>
-							<div class="fix-12-12">
-								<ul class="grid">
-									<li class="col-4-12 left">
-										<h3 class="text-blue">Skillnader</h3>
-										<p>
-											Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
-											<br>
-											<br> Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
-										</p>
-									</li>
-									<li class="col-4-12 left ">
-										<h3 class="text-blue">Fördelar</h3>
-										<p>
-											• Inga dolda fel
-											<br> • Inga onödiga produktionsstopp
-											<br> • Ökad kvalitetssträvan främjas
-											<br> • Säker och lättillgänglig dokumentation
-											<br> • Ökad möjlighet till direkt erfarenhetsåterföring
-											<br> • Möjlighet till noll fel vid överlämnandet
-											<br> • Tillgång till ”Byggfelsbank” med tidigare erfarenheter och 300 000 byggfel
-										</p>
-									</li>
-									<li class="col-4-12 left">
-										<h3 class="text-blue">Effekter</h3>
-										<p>
-											Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
-											<br>
-											<br> Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
-										</p>
-									</li>
-								</ul>
-							</div>
-
-						</div>
-					</div>
-				</div>
-			</section>
-			<section class="slide white">
-				<div class="content">
-					<div class="container">
-						<div class="container-lg">
-
-							<ul class="flex reverse">
-								<li class="col-6-12 left cell-32">
-									<h1>Med iSpect</h1>
-									<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
+		<section class="slide white">
+			<div class="content">
+				<div class="container">
+					<div class="container-lg">
+						<h1 class="center fromCenter margin-top-1">Vårt helhetskoncept med Digitaliserad entreprenadbesiktning </h1>
+						<h2 class="center small">För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h2>
+						<div class="margin-bottom-4 border-bottom-grey"></div>
+						<div class="fix-12-12">
+							<ul class="grid">
+								<li class="col-6-12 left">
+									<h3>Skillnader</h3>
+									<p class="small">
+										Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
+										<br>
+										<br> Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
+									</p>
+								</li>
+								<li class="col-6-12 left ">
+									<h3>Fördelar</h3>
+									<p class="small">
+										• Inga dolda fel
+										<br> • Inga onödiga produktionsstopp
+										<br> • Ökad kvalitetssträvan främjas
+										<br> • Säker och lättillgänglig dokumentation
+										<br> • Ökad möjlighet till direkt erfarenhetsåterföring
+										<br> • Möjlighet till noll fel vid överlämnandet
+										<br> • Tillgång till ”Byggfelsbank” med tidigare erfarenheter och 300 000 byggfel
+									</p>
 								</li>
 								<li class="col-6-12 left">
-									<img class="" src="../assets/img/ispect/ipad_front_sv.png" width="600" alt="iSpect skärmdump" />
+									<h3>Effekter</h3>
+									<p class="small">
+										Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
+										<br>
+										<br> Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
+									</p>
+								</li>
+								<li class="col-6-12 left">
+									<h3>iSpect</h3>
+									<p class="small">
+										I vårt helhetskoncept för digitaliserad entreprenadbesiktning använder vi besiktningsappen iSpect.
+										<br>
+										iSpect har utvecklats i nära samarbete med Besiktningsman.se.
+										<br>
+										Vår lösning med iSpect omfattar hela byggprocessen.
+									</p>
 								</li>
 							</ul>
-
 						</div>
+
 					</div>
 				</div>
-			</section>
+			</div>
+		</section>
+		<section class="slide white">
+			<div class="content">
+				<div class="container">
+					<div class="container-lg">
 
-		</div>
+						<ul class="flex reverse">
+							<li class="col-6-12 left cell-32">
+								<h1>Med iSpect</h1>
+								<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
+							</li>
+							<li class="col-6-12 left">
+								<img class="" src="../assets/img/ispect/ipad_front_sv.png" width="600" alt="iSpect skärmdump" />
+							</li>
+						</ul>
+
+					</div>
+				</div>
+			</div>
+		</section>
+
 	</div>
+</div>
 	<!-- POLICYS Popup Text -->
 	<div class="popup animated white" data-popup-id="policy">
 		<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
