Centered the footer newsletter CTA

--- a/index.html
+++ b/index.html
@@ -546,22 +546,15 @@
 	</section>
 
 	<!-- BIG CTAS-->
-	<section class="globalFooterCards margin-bottom-8">
-		<div style="max-width: 1040px;" class="container-xl">
-			<!-- <a href="http://www.nordbygg.se/" target="_blank" class="common-Link globalFooterCard soft-shadow white safari_only">
-				<h2 class="text-white">
-				Möt oss på nordbygg!
-				<p class="text-white opacity-10">Besiktningsman.se har monter på Nordbygg 2017</p>
-			</h2>
-				<div class="img-fade"></div>
-				<img src="assets/img/nyheter/nordbyggbg.jpg" class="" style="width: 100%;border-radius:4px;" />
-			</a> -->
-			<a href="https://medium.com/besiktningsbloggen" target="_blank" style="margin-left: 10px;max-width:400px;" class="common-Link globalFooterCard soft-shadow white">
-				<h2 style="max-width: 66.667%;" class="text-blue bold"></h2>
-				<img src="assets/img/nyheter/byggint.png" />
-			</a>
+	<p class="center small text-blueGrey">Läs vårt nyhetsbrev!</p>
+	<div class="container-lg" id="newsletter">
+		<div class="center-m-down center">
+					<a href="https://medium.com/besiktningsbloggen" target="_blank" style="" class="common-Link globalFooterCard soft-shadow white">
+						<img src="assets/img/nyheter/byggint.png" />
+					</a>
 		</div>
-	</section>
+
+	</div>
 <!-- Footer -->
 <section class="slide customFooter" style="background: #f2f9ff;color: #333;">
   <div class="content">
@@ -722,7 +715,7 @@
 									<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
 								</li>
 								<li class="col-6-12 left">
-									<img class="" src="assets/img/ispect/ipad_front_sv.png" width="600" alt="iSpect skärmdump" />
+									<img src="assets/img/ispect/ipad_front_sv.png" width="600" alt="iSpect skärmdump" />
 								</li>
 							</ul>
 
